Courseware checkbox spacing fixed for Eucalyptus

--- a/themes/hms/lms/static/less/pages/course/xblock.less
+++ b/themes/hms/lms/static/less/pages/course/xblock.less
@@ -217,7 +217,7 @@
                     padding-left: 15px;
                 }
                 fieldset {
-                    margin: 0px 0px 20px 40px;
+                    margin: 0px 0px 20px 60px;
                     border: 0;
                 }
             }
